<resources>
    <string name="app_name">Medi-App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="review_goes_here">Review goes here</string>
    <string name="medi_check">Medi-Check</string>
    <string name="account">Account</string>
    <string name="insurance">Insurance</string>
    <string name="contact">Contact</string>
    <string name="medi_predict">Medi-Predict</string>
    <string name="title_activity_register2">register2</string>
    <string name="choose_your_insurance_company">Choose your insurance company</string>
    <string name="age">Age</string>
    <string name="surname">Surname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="firstname">Firstname</string>
    <string name="choose_your_general_practitioner">Choose your general practitioner</string>
    <string name="contract_length">Contract length:</string>
    <string name="number">number</string>
    <string name="months">months</string>
    <string name="make_payment">Make Payment</string>
    <string name="edit">Edit</string>
    <string name="insurance_general_practitioner">Insurance/General Practitioner</string>
    <string name="write_message_here">Write message here...</string>
    <string name="send">Send</string>
    <string name="phone">Phone</string>
    <string name="send_message">Send Message</string>
    <string name="subject">Subject</string>
    <string name="send_email">Send Email</string>
    <string name="image_of_phone">Image of phone</string>
    <string name="patient_gp">Patient/GP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_medi_check">Welcome to Medi-Check</string>
    <string name="your_patients">Your patients:</string>
    <string name="purchase_medi_coin_500">500</string>
    <string name="purchase_medi_coin_1000">1000</string>
    <string name="purchase_medi_coin_2000">2000</string>
    <string name="purchase_medi_coin_5000">5000</string>
    <string name="purchase_medi_coin_10000">10000</string>
    <string name="medicoinAddressField">Address</string>
    <string name="loading">Loading...</string>
    <string name="diabetes_risk_factor">Diabetes risk factor:</string>
    <string name="alzheimer_s_risk_factor">Alzheimer\'s risk factor:</string>
    <string name="heart_disease_risk_factor">Heart disease risk factor:</string>
    <string-array name="health_insurance">
        <item>Laya Healthcare</item>
        <item>Vhi Healthcare</item>
        <item>Chill Insurance</item>
        <item>Aviva Insurance Ireland</item>
        <item>Irish Life Health</item>
        <item>AIG Ireland</item>
        <item>McCarthy Insurance Group</item>
        <item>Acorn Insurance</item>
    </string-array>
</resources>