<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Insurance"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/insuranceHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:text="@string/insurance"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insuranceHeading"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:id="@+id/contactLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="8dp"
            android:text="@string/contract_length"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/insuranceContract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="8dp"
            android:text="@string/number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/monthsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:padding="8dp"
            android:text="@string/months"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/monthlyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="8dp"
            android:text="Monthly payment:         €"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/insuranceMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="8dp"
            android:text="@string/number"
            android:textSize="18sp" />

    </GridLayout>

    <Button
        android:id="@+id/makePaymentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:text="@string/make_payment"/>

    <Button
        android:id="@+id/editInsuranceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/makePaymentBtn"
        android:text="@string/edit"/>

    <TextView
        android:id="@+id/medi_coin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editInsuranceBtn"
        android:layout_marginTop="20dp"
        android:text="Purchase MediCoin"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/select_coin_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medi_coin_title"
        android:orientation='horizontal'>


            <RadioButton
                android:id="@+id/radio_medi_coin_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_medi_coin_500" />

            <RadioButton
                android:id="@+id/radio_medi_coin_1000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_medi_coin_1000" />

            <RadioButton
                android:id="@+id/radio_medi_coin_2000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_medi_coin_2000" />

            <RadioButton
                android:id="@+id/radio_medi_coin_5000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_medi_coin_5000" />

            <RadioButton
                android:id="@+id/radio_medi_coin_10000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purchase_medi_coin_10000" />
    </RadioGroup>

    <com.paypal.checkout.paymentbutton.PayPalButton
        android:id="@+id/payPalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_coin_amount"
        android:layout_marginTop="30dp"
        android:text="PayPal"
        />


</RelativeLayout>