<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact"
    android:padding="12dp"
    android:orientation="vertical">

   <TextView
       android:layout_marginTop="12dp"
       android:id="@+id/textViewContact"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/insurance_general_practitioner"
       android:layout_marginBottom="4dp"/>

   <Spinner
       android:id="@+id/spinnerContact"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textViewContact"
       android:padding="12dp"
       android:textAlignment="center"
       android:layout_marginBottom="12dp"/>

   <EditText
       android:id="@+id/editTextContact"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:layout_below="@+id/spinnerContact"
       android:hint="@string/write_message_here"
       android:gravity="top"
       android:autofillHints="Write message here..."
       android:inputType="text"
       android:layout_marginBottom="4dp"/>

   <Button
       android:id="@+id/sendContactBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/editTextContact"
       android:text="@string/send_message"
       android:layout_marginBottom="12dp"/>

   <Button
       android:id="@+id/callContactBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/sendContactBtn"
       android:text="@string/phone" />

</RelativeLayout>