<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MediPredict">

    <TextView
        android:id="@+id/headerMedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/medi_predict"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayoutMedi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerMedi"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diabetes_risk_factor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/loading"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMedi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutMedi"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alzheimer_s_risk_factor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alzheimers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/loading"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMedi3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutMedi2"
        android:orientation="horizontal"
        android:paddingTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_disease_risk_factor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/heartDisease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:text="@string/loading"
            android:textSize="25sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutMedi3"
        android:paddingTop="24dp"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:text="If a negative emoji is shown contact your GP immediately"/>

</RelativeLayout>